# Computers-in-Engineering-Class

homework/hw1/: CMakeLists.txt  main.cpp  test_file.txt
homework/hw2/: main.cpp
homework/hw3/: CMakeLists.txt  Wordle.cpp  Wordle.h  main.cpp
homework/hw4/: CMakeLists.txt  main.cpp
homework/hw5/: CMakeLists.txt  main.cpp
homework/hw5/cmake_modules/: FindSFML.cmake
homework/hw5/fonts/ValentineCute/: Read Me.txt
homework/hw6/: main.cpp
homework/hw7/: CMakeLists.txt  README.md  main.cpp
homework/hw8/: CMakeLists.txt  MyList.cpp  MyList.h  Node.cpp  Node.h  main.cpp
practice/1_multiFileExample/: CMakeLists.txt  ComplexNumber.cpp  ComplexNumber.h  main.cpp
practice/Exam#1/: CMakeLists.txt  main.cpp
practice/InheritanceEx/: CMakeLists.txt  main.cpp
practice/lec01Introduction/: notes.txt
practice/lec03CLionCMakeDebugging/: CMakeLists.txt  main.cpp  notes.txt
practice/lec04FileIO/: CMakeLists.txt  data.txt  main.cpp  notes.txt
practice/lec05Vectors/: CMakeLists.txt  main.cpp  notes.txt
practice/lec06Functions/: CMakeLists.txt  main.cpp  notes.txt
practice/lec26CopyConstructorEx/: CMakeLists.txt  main.cpp
practice/moreOnClasses/: CMakeLists.txt  main.cpp
